build/log/idf_py_stderr_output_70944
/home/pi/remoteLED/main/remoteLED.c: In function '_http_event_handler':
/home/pi/remoteLED/main/remoteLED.c:92:17: error: 'auth_token' undeclared (first use in this function)
   92 |         strncpy(auth_token, (char *)evt->data, evt->data_len);
      |                 ^~~~~~~~~~
/home/pi/remoteLED/main/remoteLED.c:92:17: note: each undeclared identifier is reported only once for each function it appears in
/home/pi/remoteLED/main/remoteLED.c: In function 'get_auth_token':
/home/pi/remoteLED/main/remoteLED.c:129:24: error: 'auth_token' undeclared (first use in this function); did you mean 'get_auth_token'?
  129 |                 strcpy(auth_token, token->valuestring);
      |                        ^~~~~~~~~~
      |                        get_auth_token
In file included from /home/pi/remoteLED/main/remoteLED.c:5:
/home/pi/remoteLED/main/remoteLED.c:130:26: error: 'TAG' undeclared (first use in this function)
  130 |                 ESP_LOGI(TAG, "JWT Token: %s", auth_token);
      |                          ^~~
/home/pi/esp32/esp-idf/components/log/include/esp_log.h:140:81: note: in definition of macro 'ESP_LOG_LEVEL'
  140 |         if (level==ESP_LOG_ERROR )          { esp_log_write(ESP_LOG_ERROR,      tag, LOG_FORMAT(E, format), esp_log_timestamp(), tag, ##__VA_ARGS__); } \
      |                                                                                 ^~~
/home/pi/esp32/esp-idf/components/log/include/esp_log.h:72:38: note: in expansion of macro 'ESP_LOG_LEVEL_LOCAL'
   72 | #define ESP_LOGI( tag, format, ... ) ESP_LOG_LEVEL_LOCAL(ESP_LOG_INFO,    tag, format, ##__VA_ARGS__)
      |                                      ^~~~~~~~~~~~~~~~~~~
/home/pi/remoteLED/main/remoteLED.c:130:17: note: in expansion of macro 'ESP_LOGI'
  130 |                 ESP_LOGI(TAG, "JWT Token: %s", auth_token);
      |                 ^~~~~~~~
/home/pi/remoteLED/main/remoteLED.c:153:1: error: expected declaration or statement at end of input
  153 | }
      | ^
/home/pi/remoteLED/main/remoteLED.c: At top level:
/home/pi/remoteLED/main/remoteLED.c:142:6: warning: 'app_main' defined but not used [-Wunused-function]
  142 | void app_main(void) {
      |      ^~~~~~~~
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:82: esp-idf/main/CMakeFiles/__idf_main.dir/remoteLED.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:6157: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:149: all] Error 2
